# example-box

./: .gitignore
module-23/task-01/: main.cpp
module-23/task-02/: main.cpp
module-23/task-03/: main.cpp
module-24/task-01/: main.cpp
module-24/task-02/: LibDate.cpp  LibDate.h  main.cpp
module-24/task-03/: main.cpp
module-25/task-01/: CMakeLists.txt
module-25/task-01/include/: Operation.h
module-25/task-01/src/: Operation.cpp  main.cpp
module-25/task-02/: CMakeLists.txt
module-25/task-02/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
module-25/task-02/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
module-26/task-01/: CMakeLists.txt
module-26/task-01/include/: player.h
module-26/task-01/src/: CMakeLists.txt  main.cpp  player.cpp
module-26/task-02/: CMakeLists.txt
module-26/task-02/include/: phone.h
module-26/task-02/src/: CMakeLists.txt  main.cpp  phone.cpp
module-26/task-03/: CMakeLists.txt
module-26/task-03/include/: window.h
module-26/task-03/src/: CMakeLists.txt  main.cpp  window.cpp
module-27/task-01/: CMakeLists.txt
module-27/task-01/include/: elf.cpp  elf.h
module-27/task-01/src/: CMakeLists.txt  main.cpp
module-27/task-02/: CMakeLists.txt
module-27/task-02/include/: figure.cpp  figure.h
module-27/task-02/src/: CMakeLists.txt  main.cpp
module-27/task-03/: CMakeLists.txt
module-27/task-03/include/: work.h
module-27/task-03/src/: CMakeLists.txt  main.cpp
module-28/task-01/: CMakeLists.txt
module-28/task-01/include/: swim.h
module-28/task-01/src/: CMakeLists.txt  main.cpp  swim.cpp
module-28/task-02/: CMakeLists.txt
module-28/task-02/include/: train.h
module-28/task-02/src/: CMakeLists.txt  main.cpp  train.cpp
module-28/task-03/: CMakeLists.txt
module-28/task-03/include/: kitchen.h
module-28/task-03/src/: CMakeLists.txt  kitchen.cpp  main.cpp
module-29/task-01/: CMakeLists.txt
module-29/task-01/include/: dog.h
module-29/task-01/src/: CMakeLists.txt  dog.cpp  main.cpp
module-29/task-02/: CMakeLists.txt
module-29/task-02/include/: shape.h
module-29/task-02/src/: CMakeLists.txt  main.cpp  shape.cpp
module-30/task-01/: CMakeLists.txt  main.cpp
module-30/task-02/: CMakeLists.txt  main.cpp
module-30/task-03/: CMakeLists.txt  main.cpp
module-31/task-01/: CMakeLists.txt
module-31/task-01/include/: dog.h  toy.h
module-31/task-01/src/: CMakeLists.txt  dog.cpp  main.cpp  toy.cpp
module-31/task-02/: CMakeLists.txt
module-31/task-02/include/: toy.h
module-31/task-02/lib/: CMakeLists.txt
module-31/task-02/lib/include/: my_shared_ptr.h  my_shared_ptr.hpp
module-31/task-02/lib/src/: CMakeLists.txt
module-31/task-02/src/: CMakeLists.txt  main.cpp
module-31/task-03/: CMakeLists.txt
module-31/task-03/include/: graph.h  list_graph.h  matrix_graph.h  matrix_graph.hpp
module-31/task-03/src/: CMakeLists.txt  list_graph.cpp  main.cpp
module-32/task-01/: CMakeLists.txt
module-32/task-01/src/: CMakeLists.txt  film.json  main.cpp
module-32/task-02/: CMakeLists.txt
module-32/task-02/src/: CMakeLists.txt  film.json  main.cpp
module-32/task-03/: CMakeLists.txt  company.pb.cc  company.pb.h  company.proto  main.cpp
module-33/task-01/: CMakeLists.txt
module-33/task-01/include/: trash.h
module-33/task-01/src/: CMakeLists.txt  main.cpp  trash.cpp
module-33/task-02/: CMakeLists.txt
module-33/task-02/include/: fish.h
module-33/task-02/src/: CMakeLists.txt  fish.cpp  main.cpp
module-33/task-03/: CMakeLists.txt
module-33/task-03/include/: registry.h  registry.hpp
module-33/task-03/src/: CMakeLists.txt  main.cpp
module-33/task-04/: CMakeLists.txt  main.cpp
module-35/: CMakeLists.txt  main.cpp
module-36/: CMakeLists.txt  main.cpp
